# sandbox

./: .gitignore  .pre-commit-config.yaml  README.md  icon_creator.py  pg_toolbox.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  merges.yml  release.yml
icons/: custom_icons.rc  custom_icons.res
my_package/: pyproject.toml
scripts/: recursive_pull.sh
src/sandbox/: __init__.py  _version.py  icon_creator.py  pg_toolbox.py  resampling.py
src/sandbox/tutorials/: Sparameters.ipynb  regex_examples.py  spectrum_analyzer.ipynb
src/tutorials/: regex_examples.py
tests/: test_dummy.py
tutorials/: Sparameters.ipynb  spectrum_analyzer.ipynb  variable_types.ipynb
