[project]
name = "sandbox"
description = "A safe place to try random and small stuff that is not worth a dedicated repo (yet)."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]         # <- version comes from Git, not hard-coded here
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
]

[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
# write the resolved version into your package under src/
#write_to = "src/sandbox/_version.py"
# optional but nice when tags don't exist yet:
fallback_version = "0.0.0"
