[project]
name = "sandbox"
description = "A safe place to try random and small stuff that is not worth a dedicated repo (yet)."
readme = "README.md"
requires-python = ">=3.11"
dynamic = ["version"]         # <- version comes from Git, not hard-coded here
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-cov",
  "pre-commit",
  "ruff",
  "black",
]

[build-system]
requires = ["setuptools>=69", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
# Start pragmatic; expand later if you like.
select = ["E", "F", "W", "I", "B", "UP"]
# E,F,W: pycodestyle/pyflakes; I: isort; B: flake8-bugbear; UP: pyupgrade
ignore = ["E501", "B007"]
# keep E501 enabled, but demote it to "warning"
extend-select = ["E501", "B007"]
unfixable = ["E501", "B007"]

[tool.black]
target-version = ["py311"]
line-length = 88

[tool.setuptools_scm]
# write the resolved version into your package under src/
#write_to = "src/sandbox/_version.py"
# optional but nice when tags don't exist yet:
fallback_version = "0.0.0"
